# exercicios

./: Dockerfile  LICENSE  Makefile  README.md  Untitled Diagram.drawio  docker-compose.yml  escola.py  ex1.py  ex2 - escola.py  ex3.py  pyproject.toml  sonar-project.properties
.github/workflows/: black-duck-security-scan-ci.yml  codacy.yml  pysa.yml
.trunk/: trunk.yaml
data/: grid.csv
src/: ex4.py
src/exercicios/: ex1.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex17_recursivo.py  ex18.py  ex19.py  ex2.py  ex20.py  ex20_otimizado.py  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex3-Fibonacci.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex8_class.py  ex9.py  ex_callable.py  ex_iniciais.py  ex_unpacking.py  ex_while.py  grid.csv
tests/: test_20_otimizado.py  test_ex10.py  test_ex11.py  test_ex12.py  test_ex13.py  test_ex14.py  test_ex15.py  test_ex16.py  test_ex17.py  test_ex17_recursivo.py  test_ex18.py  test_ex19.py  test_ex2.py  test_ex20.py  test_ex21.py  test_ex22.py  test_ex23.py  test_ex24.py  test_ex25.py  test_ex3.py  test_ex4.py  test_ex5.py  test_ex6.py  test_ex7.py  test_ex8.py  test_ex8_class.py  test_ex9.py
