[project]
name = "exercicios"
version = "0.1.0"
description = ""
authors = [
    {name = "yasmimcmpos",email = "yasmimfer987@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
radon = "5.1"

