[project]
name = "exercicios"
version = "0.1.0"
description = ""
authors = [
    {name = "yasmimcmpos",email = "yasmimfer987@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typing-extensions (>=4.14.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
radon = "5.1"
pytest-profiling = "^1.8.1"
pytest-cov = "^6.1.1"
mypy = "^1.16.0"

